objects/maps__ShapeLayer__c.object
<CustomObject>
    <fields>
        <fullName>ACV_Territory_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ACV Territory ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Guid__c</fullName>
        <description>Unique guid for this Territory record</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Territory Guid</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>maps__CustomGeometry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Geometry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>maps__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>maps__Folder__c</referenceTo>
        <relationshipLabel>Shape Layers</relationshipLabel>
        <relationshipName>ShapeLayers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__JobId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Options__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__ShapeLayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shape Layer</label>
        <referenceTo>maps__ShapeLayer__c</referenceTo>
        <relationshipLabel>Shape Layers</relationshipLabel>
        <relationshipName>ShapeLayers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MapsTerritories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Shape Layer</label>
    <listViews>
        <fullName>All_with_ACV_ID</fullName>
        <columns>NAME</columns>
        <columns>ACV_Territory_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>maps__Folder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with ACV ID</label>
    </listViews>
    <listViews>
        <fullName>maps__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Shape Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>